# ir2json

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: build.yml
ir2json/: __main__.py  convert_to_json_ir.py
