[metadata]
name = ir2json
version = attr: ir2json.__version__
author = Shaurya Chanana
author_email = schanana@wisc.edu
description = Convert Bruker OPUS dotZero files to JSON
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chanana/ir2json
project_urls =
    Bug Tracker = https://github.com/chanana/ir2json/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
packages = find:
python_requires = >=3.8
install_requires =
    brukeropusreader >= 1.3.4

[options.entry_points]
console_scripts =
    ir2json = ir2json.__main__:main
